--- a/camera.html
+++ b/camera.html
@@ -24,12 +24,19 @@
         <video height="200" autoplay controls id="player" class="d-none"></video>
     </div>
 
-
+    <div class="position-absolute" style="top:50px;right : 50px">
+        <button type="button" id="swichCamera" class="btn btn-primary btn-lg"> <i class="bi bi-camera2"></i></button>
+    </div>
     <script>
         const startBtn = document.getElementById("start")
         const captureBtn = document.getElementById("capture")
         const closeBtn = document.getElementById("close")
         const player = document.getElementById("player")
+        const switchBtn = document.getElementById("swichCamera")
+        let mode = "user"
+        switchBtn.addEventListener("click", () => {
+            mode = "environment"
+        })
 
         startBtn.addEventListener("click", async() => {
             console.log("start button clicked")
@@ -43,7 +50,7 @@
                 const x = await navigator.mediaDevices.getUserMedia({
                     video: {
                         facingMode: {
-                            exact: "environment"
+                            exact: mode
                         }
                     },
 
